--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/icodetree/nodejs#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "figlet": "^1.5.2"
   }
