--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "figlet": "^1.5.2"
+    "figlet": "^1.5.2",
+    "nodemon": "^2.0.20"
   }
 }
