--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "nodejs study",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,12 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "figlet": "^1.5.2",
+    "figlet": "^1.5.2"
+  },
+  "devDependencies": {
+    "cookie-parser": "^1.4.6",
+    "express-session": "^1.17.3",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
   }
 }
