--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "figlet": "^1.5.2"
+    "figlet": "^1.5.2",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "cookie-parser": "^1.4.6",
