--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/icodetree/nodejs#readme",
   "dependencies": {
+    "axios": "^1.3.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "figlet": "^1.5.2",
