--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "figlet": "^1.5.2",
+    "redis": "^4.6.5",
     "request": "^2.88.2"
   },
   "devDependencies": {
