--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "^4.18.2",
     "figlet": "^1.5.2",
     "redis": "^4.6.11",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "uuid-apikey": "^1.5.3"
   },
   "devDependencies": {
     "cookie-parser": "^1.4.6",
