--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "figlet": "^1.5.2",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.9",
     "redis": "^4.6.11",
     "request": "^2.88.2",
